--- a/app/src/main/res/layout/demo_video_content_layout.xml
+++ b/app/src/main/res/layout/demo_video_content_layout.xml
@@ -9,253 +9,15 @@
         android:layout_height="match_parent">
 
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/videoView_layout"
-            android:layout_width="match_parent"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/viedo_container_layout"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-            <!-- Video Layout -->
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/main_constraint_holder"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="250dp"
-                android:padding="10dp"
-                android:visibility="gone"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/main_Image_Layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:minHeight="250dp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-
-
-                    <ProgressBar
-                        android:id="@+id/progress_circle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:visibility="gone"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-
-                    <ImageView
-                        android:id="@+id/videoThumbnail"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:minHeight="250dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/app_icon"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <RelativeLayout
-                        android:id="@+id/dark_color_recycle"
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        android:background="@drawable/bg_border"
-                        android:backgroundTint="@color/black_high_opacity"
-                        app:layout_constraintBottom_toBottomOf="@id/videoThumbnail"
-                        app:layout_constraintHorizontal_bias="0.0"
-                        app:layout_constraintLeft_toLeftOf="@id/videoThumbnail"
-                        app:layout_constraintRight_toRightOf="@id/videoThumbnail"
-                        app:layout_constraintTop_toTopOf="@id/videoThumbnail"
-                        app:layout_constraintVertical_bias="0.0">
-
-                        <androidx.appcompat.widget.AppCompatImageView
-                            android:layout_width="45dp"
-                            android:layout_height="45dp"
-                            android:layout_centerInParent="true"
-                            android:src="@drawable/ic_baseline_play_circle_filled_24" />
-                    </RelativeLayout>
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <WebView
-                    android:id="@+id/webView_player"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <!-- Music Layout -->
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/music_fragment_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="250dp"
-                android:padding="10dp"
-                android:visibility="visible"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/main_music_Layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/music_icon"
-                    android:minHeight="250dp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-
-                    <androidx.appcompat.widget.AppCompatImageButton
-                        android:id="@+id/play_music"
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:layout_centerInParent="true"
-                        android:background="@android:color/transparent"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/ic_baseline_play_circle_filled_24"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-
-                    <TextView
-                        android:id="@+id/current_music_duration"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
-                        android:text="10:00"
-                        android:textColor="@color/black"
-                        android:textSize="15sp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintLeft_toLeftOf="parent" />
-
-
-                    <SeekBar
-                        android:id="@+id/current_seek_bar"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="10dp"
-                        android:padding="3dp"
-                        app:layout_constraintBottom_toBottomOf="@id/current_music_duration"
-                        app:layout_constraintLeft_toRightOf="@id/current_music_duration"
-                        app:layout_constraintRight_toLeftOf="@id/duration_music_duration" />
-
-
-                    <TextView
-                        android:id="@+id/duration_music_duration"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
-                        android:text="10:00"
-                        android:textColor="@color/black"
-                        android:textSize="15sp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintRight_toRightOf="parent" />
-
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/bck_arrow"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_margin="10dp"
-            android:background="@android:color/transparent"
-            android:contentDescription="close button"
-            android:scaleType="fitXY"
-            android:src="@drawable/ic_keyboard_arrow_down"
-            android:tint="@color/white"
+            android:text="DEMO VIDEO CONTENT"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/video_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="13dp"
-            android:layout_marginTop="13dp"
-            android:ellipsize="end"
-            android:fontFamily="@font/crimson_text_bold"
-            android:maxLines="2"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="@id/person_customer_support"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/person_customer_support"
-            app:layout_constraintTop_toBottomOf="@id/videoView_layout"
-            tools:text="testing layout for adding.. jgjklf k hjgkhkfgjk lhgfjhfgjkh hgjkhfkjlhkl ghjflghkl fgfhjghkflgjhfkhfklgjhlfghkfklgfdkgdk" />
-
-
-        <ImageButton
-            android:id="@+id/person_customer_support"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_margin="13dp"
-            android:background="@android:color/transparent"
-            android:contentDescription="Customer Support"
-            android:padding="8dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/ic_person_support"
-            android:tint="@color/black"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/videoView_layout" />
-
-        <TextView
-            android:id="@+id/by_uptodd_team"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/montserrat"
-            android:text="By Uptodd Team\n\nRelated Videos"
-            android:textColor="@color/div"
-            android:textSize="13sp"
-            app:layout_constraintLeft_toLeftOf="@id/video_title"
-            app:layout_constraintTop_toBottomOf="@id/video_title" />
-
-
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/viewPager"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/by_uptodd_team" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/next_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/button_bg_horizontal_gradient"
-            android:minWidth="150dp"
-            android:paddingStart="18dp"
-            android:paddingEnd="18dp"
-            android:text="Next"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="@id/viewPager"
-            app:layout_constraintLeft_toLeftOf="@id/viewPager"
-            app:layout_constraintRight_toRightOf="@id/viewPager"
-            app:layout_constraintTop_toTopOf="@id/viewPager"
-            app:layout_constraintVertical_bias=".9" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
