--- a/app/src/main/res/layout/took_kit_and_review_layout.xml
+++ b/app/src/main/res/layout/took_kit_and_review_layout.xml
@@ -1,150 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.uptodd.uptoddapp.ui.freeparenting.toolkitreview.ToolKitAndReviewFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/main_video_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/viedo_container_layout"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/main_constraint_holder"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="250dp"
-                android:padding="10dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/main_Image_Layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:minHeight="250dp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-
-
-                    <ProgressBar
-                        android:id="@+id/progress_circle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:visibility="gone"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-
-                    <ImageView
-                        android:id="@+id/videoThumbnail"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:minHeight="250dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/app_icon"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <RelativeLayout
-                        android:id="@+id/dark_color_recycle"
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        android:background="@drawable/bg_border"
-                        android:backgroundTint="@color/black_high_opacity"
-                        app:layout_constraintBottom_toBottomOf="@id/videoThumbnail"
-                        app:layout_constraintHorizontal_bias="0.0"
-                        app:layout_constraintLeft_toLeftOf="@id/videoThumbnail"
-                        app:layout_constraintRight_toRightOf="@id/videoThumbnail"
-                        app:layout_constraintTop_toTopOf="@id/videoThumbnail"
-                        app:layout_constraintVertical_bias="0.0">
-
-                        <androidx.appcompat.widget.AppCompatImageView
-                            android:layout_width="45dp"
-                            android:layout_height="45dp"
-                            android:layout_centerInParent="true"
-                            android:src="@drawable/ic_baseline_play_circle_filled_24" />
-                    </RelativeLayout>
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <WebView
-                    android:id="@+id/webView_player"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/bck_arrow"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_margin="10dp"
-            android:background="@android:color/transparent"
-            android:contentDescription="close button"
-            android:scaleType="fitXY"
-            android:src="@drawable/ic_keyboard_arrow_down"
-            android:tint="@color/white"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
         <TextView
-            android:id="@+id/video_title_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:ellipsize="end"
-            android:paddingEnd="10dp"
-            android:paddingStart="10dp"
-            android:maxLines="2"
-            android:text="jdkgdgkldf dkjfhlkhlkgf gjklgjkl jkhgjklgjk lfhkl jgklgjkl gjklg gjklgjkggfjgkgklgjklgjhhjgkllk"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/main_video_layout" />
-
-
-        <TextView
-            android:id="@+id/suggestion_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:text="Suggestion"
-            android:textColor="@color/div"
-            app:layout_constraintLeft_toLeftOf="@id/video_title_txt"
-            app:layout_constraintTop_toBottomOf="@id/video_title_txt" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/main_recycle_view"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="10dp"
-            android:scrollbars="vertical"
+            android:text="Took Kit Fragment"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/suggestion_txt"
-            tools:listitem="@layout/video_item_tool_kit_and_review_layout" />
+            app:layout_constraintLeft_toLeftOf="parent"
+            />
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
