--- a/app/src/main/res/menu/free_parenting_btom_nav.xml
+++ b/app/src/main/res/menu/free_parenting_btom_nav.xml
@@ -1,42 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <item
-            android:id="@+id/freeDemoBashBoardFragment"
-            android:icon="@drawable/ic_home"
-            android:enabled="true"
-            android:title="Home" />
-
     <item
         android:id="@+id/freeDemoBashBoardFragment"
-        android:icon="@drawable/ic_home"
         android:enabled="true"
+        android:icon="@drawable/ic_home"
+        android:title="Home" />
+
+    <item
+        android:id="@+id/demoVideoContentFragment"
+        android:enabled="true"
+        android:icon="@drawable/ic_baseline_play_circle_filled_24"
         android:title="Programs" />
 
 
     <item
-        android:id="@+id/freeDemoBashBoardFragment"
-        android:icon="@drawable/ic_home"
+        android:id="@+id/toolKitAndReviewFragment"
         android:enabled="true"
-        android:title="Daybook" />
-
-
-    <item
-        android:id="@+id/dayBook"
-        android:icon="@drawable/ic_home"
-        android:enabled="true"
+        android:icon="@drawable/ic_calendar"
         android:title="Daybook" />
 
     <item
         android:id="@+id/communityFile"
-        android:icon="@drawable/ic_home"
         android:enabled="true"
+        android:icon="@drawable/ic_baseline_support_agent_24"
         android:title="Community" />
 
     <item
         android:id="@+id/circleFragment"
-        android:icon="@drawable/ic_home"
         android:enabled="true"
+        android:icon="@drawable/ic_baseline_bar_chart_24"
         android:title="Circle" />
 
 
