--- a/app/src/main/res/layout/actvity_free_demo.xml
+++ b/app/src/main/res/layout/actvity_free_demo.xml
@@ -27,22 +27,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
+            app:itemRippleColor="@color/gradientCarouselIndicatorEndColor"
             app:itemIconTint="@drawable/bottom_navigation_selector"
             app:itemTextColor="@drawable/bottom_navigation_selector"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:menu="@menu/free_parenting_btom_nav" />
-
-        <!--<com.google.android.material.bottomappbar.BottomAppBar
-            android:id="@+id/bottom_nav_bar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:menu="@menu/free_parenting_btom_nav" />-->
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
