--- a/app/src/main/res/layout/actvity_free_demo.xml
+++ b/app/src/main/res/layout/actvity_free_demo.xml
@@ -27,7 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
-            app:itemRippleColor="@color/gradientCarouselIndicatorEndColor"
+            app:itemRippleColor="#c2e7ff"
             app:itemIconTint="@drawable/bottom_navigation_selector"
             app:itemTextColor="@drawable/bottom_navigation_selector"
             app:layout_constraintBottom_toBottomOf="parent"
