--- a/app/src/main/res/layout/daily_book_layout.xml
+++ b/app/src/main/res/layout/daily_book_layout.xml
@@ -43,6 +43,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_below="@id/tabs"
+            android:layout_margin="5dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
