--- a/app/src/main/res/layout/free_parenting_toolbar_header.xml
+++ b/app/src/main/res/layout/free_parenting_toolbar_header.xml
@@ -37,7 +37,9 @@
                 android:id="@+id/account_icon"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:background="@android:color/transparent"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
                 android:contentDescription="Account"
                 android:scaleType="centerInside"
                 android:src="@drawable/account_icon"
